--- a/core/design/src/main/res/values-night/themes.xml
+++ b/core/design/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.LanguageApp" parent="@android:style/Theme.Material.NoActionBar">
+    <style name="Theme.LanguageApp" parent="Theme.AppCompat.NoActionBar">
         <item name="android:colorPrimary">#410FA3</item>
         <item name="android:colorBackground">#080E1E</item>
     </style>
